--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-sound-player": "^0.6.1",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
